# kaiten-desktop

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  CustomWebEnginePage.cpp  CustomWebEnginePage.h  Dockerfile  README.md  main.cpp  resources.qrc
.github/workflows/: build-app.yml  build-docs.yml  build.yml  cmake-multi-platform.yml  cmake-single-platform.yml  dockerhub.publish.yml  github.publish.yml  publish-release.yml  publish.yml  webpack.yml
debug/: docker-compose.yml
debug/server/templates/: default.conf.template
demo-server/: Dockerfile
demo-server/app/: main.py  utils.py
demo-server/app/mock-data/: board-cards.json  board-columns.json  board-lanes.json  board.json  card-activities.json  card-types.json  current-user.json  custom-properties.json  spaces.json  tags.json  users.json
demo-server/app/routes/: boards.py  cards.py  common.py  spaces.py  users.py
desktop/: Application.cpp  CMakeLists.txt  CustomWebEnginePage.cpp  kaiten.desktop  main.cpp  resources.qrc
landing/: README.md  audience.md  demo.md  index.md  package-lock.json  reasons.md  support.md  usage.md
landing/.vitepress/: config.mts
logo/: logo.xcf  splash.xcf
mobile/: config.xml  package-lock.json  package.json
proxy/: docker-compose.yml
proxy/server/templates/: default.conf.template
pwa/: .eslintrc.json  .gitignore  README.md  angular.json  package-lock.json  package.json
pwa/src/: browser.index.html  cordova.index.html  desktop.index.html  index.html  styles.scss
pwa/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts  http-backend.ts
pwa/src/app/components/board/: board.component.html  board.component.scss  board.component.ts
pwa/src/app/components/board-lanes-legend/: board-lanes-legend.component.html  board-lanes-legend.component.spec.ts  board-lanes-legend.component.ts
pwa/src/app/components/card/: card-lifetime-base.component.ts  card.component.html  card.component.ts
pwa/src/app/components/card-editor/: card-editor.component.html  card-editor.component.scss  card-editor.component.spec.ts  card-editor.component.ts  ngb-date-string-adapter.service.ts
pwa/src/app/components/card-search-input/: card-search-input.component.html  card-search-input.component.spec.ts  card-search-input.component.ts
pwa/src/app/components/copy-to-clipboard-button/: copy-to-clipboard-button.component.html  copy-to-clipboard-button.component.spec.ts  copy-to-clipboard-button.component.ts
pwa/src/app/components/current-user/: current-user.component.html  current-user.component.scss  current-user.component.ts
pwa/src/app/components/inline-member/: inline-member.component.html  inline-member.component.spec.ts  inline-member.component.ts
pwa/src/app/components/list-of-cards/: list-of-cards.component.html  list-of-cards.component.scss  list-of-cards.component.spec.ts  list-of-cards.component.ts
pwa/src/app/components/md-editor/: md-editor.component.html  md-editor.component.spec.ts  md-editor.component.ts
pwa/src/app/components/md-viewer/: md-viewer.component.html  md-viewer.component.spec.ts  md-viewer.component.ts
pwa/src/app/core/: cordova-application.ts  date-extensions.d.ts  element-extensions.d.ts  http-backend-decorator.ts  qt-application.ts
pwa/src/app/functions/: check-text-equals.function.ts  check-text-equals.ts  clone.function.ts  find-column-recursive.function.ts  find-column-recursive.ts  flatten-columns.function.ts  flatten-columns.ts  format-card-link-for-clipboard.ts  format-kaiten-card-link-for-clipboard.ts  get-card-column-title.ts  get-card-state.ts  get-lane-color.function.ts  get-lane-color.ts  get-text-or-default.function.ts  input-from-event.function.ts  input-from-event.ts  md-plugin.function.ts  md-plugin.ts  pastel-color.function.ts  pastel-color.ts  string-to-date.function.ts  string-to-date.ts  union-if-not-exists.function.ts  union-if-not-exists.ts
pwa/src/app/guards/: auth.guard.ts  modal.guard.ts  textEditor.guard.ts
pwa/src/app/interceptors/: api.interceptor.ts  error.interceptor.ts  qweb.interceptor.ts  retry.interceptor.ts  throttle.interceptor.ts
pwa/src/app/models/: block-blocker.model.ts  board.ts  card-activity.ts  card-comment.ts  card-ex.ts  card-external-link.ts  card-file.ts  card-properties.ts  card-state.ts  card-type.ts  card-with-reference.ts  card.ts  check-list-item.ts  check-list.ts  children-number-properties-sum.ts  column-ex.ts  column.ts  credentials.ts  custom-property.ts  external-link.ts  group.ts  lane.ts  member-type.ts  name.ts  notification-settings.ts  owner.ts  path-data.ts  personal-settings.ts  role-permissions.ts  setting.ts  share-settings-fields-permissions.ts  share-settings.ts  source.ts  space-addons-permissions.ts  space-automation-permissions.ts  space-board-permissions.ts  space-card-permissions.ts  space-document-permissions.ts  space-permissions.ts  space-root-permissions.ts  (+7 more)
pwa/src/app/pipes/: elapsed.pipe.ts  timespan.pipe.ts
pwa/src/app/resolvers/: board-cards.resolver.ts  board-columns.resolver.ts  board-lanes.resolver.ts  board.resolver.ts  card.resolver.ts
pwa/src/app/services/: api.service.ts  auth.service.ts  avatar.service.ts  board.service.ts  card-editor.service.ts  card-search.service.ts  card-transition.service.ts  card.service.ts  changes-notification.service.ts  current-board.service.ts  custom-property.service.ts  db.ts  dialog.service.ts  dialogService.ts  file.service.ts  setting.service.ts  tag.service.ts  theme-manager.service.ts  throughput-report.service.ts  toast.service.ts  user.service.ts
pwa/src/assets/test-data/: board.json  cards.json  spaces.json  user.json
pwa/src/scripts/: application-proxy.js  polyfill.js
(+114 files in other folders)
